# 1d2e

./: .gitignore  CMakeLists.txt  README.md
cpp/src/integrators/: rungekutta.cc
data/: runjob_atoms.sh  runjob_exact.sh  runjob_scf.sh  runjob_sparse_itp.sh  setjob.sh
data/3d-calculations/: psi4-atoms-3d.ipynb
data/notebooks/: dataset.ipynb  exact_analysis.html  exact_analysis.ipynb  exact_densities.ipynb  exact_intracules.ipynb  scf_analysis.html  scf_analysis.ipynb  scf_intracule.ipynb
data/z2_a1e-1_b1e-1/n128/: evals.txt  psi_itp.out
data/z2_a1e-1_b1e-1/n16/: imag_tprop.out
data/z2_a1e-1_b1e-1/n512/: imag_tprop.out
data/z2_a1e-1_b1e-1/n64/: psi_itp.out
data/z2_a1e-2_b1e-2/n128/: imag_tprop.out  psi_itp.out
data/z2_a1e-2_b1e-2/n32/: evec01.txt  imag_tprop.out
data/z2_a1e-2_b1e-2/n512/: imag_tprop.out
data/z2_a1e-2_b1e-2/n64/: evals.txt  imag_tprop.out
data/z2_a1e-3_b1e-3/n128/: evec01.txt  imag_tprop.out
data/z2_a1e-3_b1e-3/n16/: evec01.txt  imag_tprop.out
data/z2_a1e-3_b1e-3/n512/: imag_tprop.out
data/z2_a1e00_b1e00/n16/: evec01.txt
data/z2_a1e00_b1e00/n32/: evec01.txt
fortran/: README.md  compile.sh  run_test_1e_dvr.sh  run_test_2e_dvr.sh  run_tests.sh
fortran/data/: README.md
fortran/scripts/: multiwell.f90  two_electron_itp.f90
fortran/scripts/bash_scripts/: run_test_2e_dvr.sh  run_tests.sh
fortran/src/: blas_wrappers.f90  exact_2e_dvr.f90  helpers.f90  imag_tprop.f90  integrators.f90  itprop.f90  lapack_wrappers.f90  real_tprop.f90  rungekutta.f90  two_electron_dvr.f90
fortran/tests/: CMakeLists.txt  blas_wrappers.mod  evals.txt  evec0.txt  helpers.mod  imag_tprop.out  integrators.mod  itp.out  lapack_wrappers.mod  run_test_1e_dvr.sh  test_1e_dvr.f90  test_1e_dvr.x  test_2e_dvr.f90  test_2e_dvr.x  test_ho_dvr.f90  test_ho_dvr.x  test_intracules.f90  test_matmul.f90  test_matmul.x  test_omp.f90  test_sparse_itp.f90  test_sparse_rtp.f90
python/: two_electron.ipynb  wigner_intracules.ipynb
src/: hartreefock.f90  helpers.f90  imag_tprop.f90  intracules.f90  lapack_wrappers.f90  real_tprop.f90  rungekutta.f90  two_electron_dvr.f90
src/cpp/bindings/: py_integrators.cc  py_wigner.cc
src/cpp/integrators/: rungekutta.h
src/fortran/: compile.sh  evals.txt  helpers.f90  helpers.mod  integrators.f90  integrators.mod  itp.out  test_ho_dvr.f90  test_ho_dvr.x  test_matmul.f90  test_matmul.x
tests/: CMakeLists.txt  test_1e_dvr.f90  test_2e_dvr.f90  test_hartreefock.f90  test_ho_dvr.f90  test_intracules.f90  test_matmul.f90  test_otf_itp.f90  test_sparse_blas.f90  test_sparse_itp.f90  test_sparse_rtp.f90
(+804 files in other folders)
